# python-qr

./: README.md  pyproject.toml
src/: basic_qrcode.py
