[project]
name = "python-qr"
version = "0.1.0"
description = "A simple QR code generator for Python."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qrcode-artistic>=3.0.2",
    "segno>=1.6.6",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flake8==7.2.0",
    "iniconfig==2.1.0",
    "mccabe==0.7.0",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pygments==2.19.1",
    "pytest==8.4.0",
]
